syntax = "proto3";
option go_package = "iceline-hosting.com/backend/proto/fsmanager";
package fsmanager;

import "google/protobuf/empty.proto";

service FsManager {
    rpc GetFileStat(GetFileStatRequest) returns (GetFileStatResponse) {}
    rpc ListFilePath(ListFilePathRequest) returns (ListFilePathResponse) {}
    rpc CreatePath(CreatePathRequest) returns (google.protobuf.Empty) {}
    rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {}
    rpc BulkDownloadFile(BulkDownloadFileRequest) returns (stream DownloadFileResponse) {}
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {}
    rpc DeleteFile(DeleteFileRequest) returns (google.protobuf.Empty) {}
    rpc RecoverFile(RecoverFileRequest) returns (google.protobuf.Empty) {}
    rpc MoveFile(TwoFileRequest) returns (google.protobuf.Empty) {}
    rpc CopyFile(TwoFileRequest) returns (google.protobuf.Empty) {}
    rpc CompressFile(CompressFileRequest) returns (google.protobuf.Empty) {}
    rpc BulkCompressFile(BulkCompressFileRequest) returns (google.protobuf.Empty) {}
}

message GetFileStatRequest {
    string path = 1;
}

message GetFileStatResponse {
    FileInfo stat = 1;
}

message ListFilePathRequest {
    string path = 1;
}

message ListFilePathResponse {
    repeated DirEntry fileList = 1;
}

message DownloadFileRequest {
    string path = 1;
    string name = 2;
}

message BulkDownloadFileRequest {
    string path = 1;
    repeated string fileNameList = 2;
}

message DownloadFileResponse {
    bytes data = 1;
}

message UploadFileRequest {
    string file_name = 1;
    string path = 2;
    bytes data = 3;
}

message UploadFileResponse {
    string file_name = 1;
    string path = 2;
    uint32 size = 3;
}

message FileInfo {
    string name = 1;
    int64 size = 2;
    uint32 mode = 3;
    int64 modTime = 4;
    bool isDir = 5;
}

message DirEntry {
    string name = 1;
    bool isDir = 2;
    uint32 type = 3;
    FileInfo info = 4;
}

message DeleteFileRequest {
    string path = 1;
    string name = 2;
}

message RecoverFileRequest {
    string path = 1;
    string name = 2;
}

message TwoFileRequest {
    string path = 1;
    string name = 2;
    string newPath = 3;
    string newName = 4;
}

message CompressFileRequest {
    string path = 1;
    string name = 2;
}

message BulkCompressFileRequest {
    string path = 1;
    repeated string fileNameList = 2;
}

message CreatePathRequest {
    string path = 1;
    string name = 2;
    bool isDir = 3;
}
